--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="flex justify-between md:justify-start h-16">
                 <div class="flex items-center cursor-pointer md:mr-8" onclick="app.navigate('list')">
                     <i class="fa-solid fa-building text-2xl mr-2 text-brand-200"></i>
-                    <span class="font-bold text-xl tracking-tight">Meu Apto Ideal</span>
+                    <span class="font-bold text-xl tracking-tight">Lucas & Kaillany</span>
                 </div>
                 
                 <!-- Desktop Menu -->
