--- a/index.html
+++ b/index.html
@@ -1229,7 +1229,7 @@
                     didOpen: () => Swal.showLoading()
                 });
 
-                const apiKey = ""; 
+                const apiKey = "AIzaSyABpe0iE_mtZfkXMG13gBk3k3f-L3a1Wos"; 
                 const url = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${apiKey}`;
                 
                 const prompt = `Analise o seguinte texto de um anúncio imobiliário e extraia os dados solicitados.
